# mcp-endpoint

./: README.md  main.py  pyproject.toml
src/mcp_endpoint/: server.py
