[project]
name = "mcp-endpoint"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that calls external HTTP endpoints"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.2",
    "httpx>=0.27",
    "fastapi>=0.115.2",
    "uvicorn>=0.23.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-endpoint"
Repository = "https://github.com/yourusername/mcp-endpoint"
Issues = "https://github.com/yourusername/mcp-endpoint/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true